<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="penserlabs.womensafety.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_bg"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/username_ET_hint"

        >

        <EditText
            android:id="@+id/Email_ET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="email"
            android:background="@drawable/roun_et_states"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"

            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:id="@+id/Password_ET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="email"
            android:hint="@string/password_ET_hint"
            android:background="@drawable/roun_et_states"
            android:inputType="textPassword"
            android:paddingLeft="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/Signup_BT"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/Register_BT"
        android:background="@drawable/roun_et_states"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent" />
    <TextView
        android:id="@+id/Signin_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Signin_TV"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:clickable="true"
        android:onClick="signin_text"
        android:focusable="true" />
    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/Google_BT"
        android:translationY="100dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/google_sign_up"
        app:isDarkTheme="true"
        android:onClick="signIn"/>
</LinearLayout>
